Fixed tests and users-courses cascading being asymmetrical